@@ -25,6 +25,7 @@
 [fix] fix playback of Purchases
 [fix] fixed saved playlists that don't belong to a channel
 [fix] mpeg-dash frame rate representation
+[fix] datetime parsing if no datetime string is available
 [chg] handle playback monitoring in threads
 [lang] nl_nl strings |contrib: MB1968|
         </news>
